bugfix/lists — On iOS, the last item in characters and comics lists (show more button) is sticked to the bottom (margin bottom is not respected).

--- a/app/characters/_characters.scss
+++ b/app/characters/_characters.scss
@@ -12,3 +12,10 @@
         object-position: center;
     }
 }
+.platform-ios.platform-cordova .characters{
+    &__footer{
+        // Bugfix iOS
+        // margin-bottom is not respected.
+        transform: translateY(-10px);
+    }
+}
