--- a/app/comics/_comics.scss
+++ b/app/comics/_comics.scss
@@ -12,3 +12,10 @@
         object-position: center;
     }
 }
+.platform-ios.platform-cordova .comics{
+    &__footer{
+        // Bugfix iOS
+        // margin-bottom is not respected.
+        transform: translateY(-10px);
+    }
+}
